--- a/walmart-mock/cart.html
+++ b/walmart-mock/cart.html
@@ -23,10 +23,21 @@
     let total = 0;
 
     cart.forEach((item) => {
-      total += item.price;
+      const match = item.name.match(/(\d+)\s*(kg|l|liter|pack|bottle)/i);
+      const unitValue = match ? parseInt(match[1]) : 1;
+      const unitLabel = match ? match[2] : "";
+      const totalUnit = item.quantity * unitValue;
+
+      const lineTotal = item.price * item.quantity;
+      total += lineTotal;
+
       const div = document.createElement("div");
       div.className = "product";
-      div.innerHTML = `<h3>${item.name}</h3><p>₹${item.price}</p>`;
+      div.innerHTML = `
+        <h3>${item.name}</h3>
+        <p>Quantity: ${item.quantity} → ${totalUnit}${unitLabel}</p>
+        <p>Subtotal: ₹${lineTotal}</p>
+      `;
       cartDiv.appendChild(div);
     });
 
@@ -37,7 +48,6 @@
 
     function startCheckout() {
       const saved = JSON.parse(localStorage.getItem("paymentCreds"));
-
       if (saved) {
         const useSaved = confirm("Use saved payment credentials?");
         if (useSaved) {
@@ -45,7 +55,6 @@
           return;
         }
       }
-
       showCredentialForm();
     }
 
