--- a/walmart-mock/index.html
+++ b/walmart-mock/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>ShopSmart Pro - Mock Store</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  
 </head>
 <body class="bg-gray-100 font-sans text-gray-800">
 
@@ -68,6 +69,7 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/tesseract.js@4.0.2/dist/tesseract.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2"></script>
   <script src="scripts.js"></script>
   <script>
     let micOn = false;
@@ -108,6 +110,7 @@ function toggleChatbox() {
       </div>
     `;
   }
+  console.log("🧾 Products on assistant button click:", products);
 }
 
 
