--- a/walmart-mock/cart.html
+++ b/walmart-mock/cart.html
@@ -19,25 +19,38 @@
     <button onclick="startCheckout()" class="bg-green-600 text-white px-6 py-3 rounded hover:bg-green-700 text-lg">💳 Proceed to Pay</button>
   </div>
 
-  <script>
-    const cart = JSON.parse(localStorage.getItem("cart") || "[]");
-    const cartDiv = document.getElementById("cartItems");
+<script>
+  let cart = JSON.parse(localStorage.getItem("cart") || "[]");
+  const cartDiv = document.getElementById("cartItems");
+  
+  function saveCart() {
+    localStorage.setItem("cart", JSON.stringify(cart));
+  }
+
+  function renderCart() {
+    cartDiv.innerHTML = "";
     let total = 0;
 
-    cart.forEach((item) => {
+    cart.forEach((item, index) => {
       const match = item.name.match(/(\d+)\s*(kg|l|liter|pack|bottle)/i);
       const unitValue = match ? parseInt(match[1]) : 1;
       const unitLabel = match ? match[2] : "";
       const totalUnit = item.quantity * unitValue;
-
       const lineTotal = item.price * item.quantity;
       total += lineTotal;
 
       const div = document.createElement("div");
-      div.className = "bg-white rounded-lg shadow p-6 border border-gray-200";
+      div.className = "bg-white rounded-lg shadow p-6 border border-gray-200 space-y-2";
       div.innerHTML = `
-        <h3 class="text-xl font-semibold mb-2">${item.name}</h3>
-        <p class="text-gray-700">Quantity: <strong>${item.quantity}</strong> → ${totalUnit}${unitLabel}</p>
+        <h3 class="text-xl font-semibold">${item.name}</h3>
+        <p class="text-gray-700">Quantity: 
+          <strong>${item.quantity}</strong> → ${totalUnit}${unitLabel}
+        </p>
+        <div class="flex items-center space-x-2">
+          <button onclick="changeQty(${index}, -1)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">➖</button>
+          <button onclick="changeQty(${index}, 1)" class="bg-gray-200 px-3 py-1 rounded hover:bg-gray-300">➕</button>
+          <button onclick="removeItem(${index})" class="bg-red-500 text-white px-3 py-1 rounded hover:bg-red-600">🗑️</button>
+        </div>
         <p class="text-gray-800 font-medium">Subtotal: ₹${lineTotal}</p>
       `;
       cartDiv.appendChild(div);
@@ -47,50 +60,69 @@
     totalDiv.className = "bg-yellow-100 border-l-4 border-yellow-500 p-4 mt-4";
     totalDiv.innerHTML = `<h2 class="text-xl font-bold text-yellow-800">Total: ₹${total}</h2>`;
     cartDiv.appendChild(totalDiv);
+  }
 
-    function startCheckout() {
-      const saved = JSON.parse(localStorage.getItem("paymentCreds"));
-      if (saved) {
-        const useSaved = confirm("Use saved payment credentials?");
-        if (useSaved) {
-          confirmPayment(saved);
-          return;
-        }
-      }
-      showCredentialForm();
+  function changeQty(index, delta) {
+    cart[index].quantity += delta;
+    if (cart[index].quantity < 1) cart[index].quantity = 1;
+    saveCart();
+    renderCart();
+  }
+
+  function removeItem(index) {
+    if (confirm(`Remove ${cart[index].name} from cart?`)) {
+      cart.splice(index, 1);
+      saveCart();
+      renderCart();
     }
+  }
 
-    function showCredentialForm() {
-      const div = document.getElementById("checkoutArea");
-      div.innerHTML = `
-        <div class="bg-white p-6 rounded shadow">
-          <h3 class="text-lg font-semibold mb-4">Enter Payment Details</h3>
-          <input type="email" id="email" placeholder="Email" class="w-full p-3 border border-gray-300 rounded mb-3" required>
-          <input type="text" id="card" placeholder="Card Number" class="w-full p-3 border border-gray-300 rounded mb-4" required>
-          <button onclick="saveAndPay()" class="w-full bg-green-600 text-white py-3 rounded hover:bg-green-700">💳 Pay Now</button>
-        </div>
-      `;
-    }
-
-    function saveAndPay() {
-      const email = document.getElementById("email").value;
-      const card = document.getElementById("card").value;
-
-      if (!email || !card) {
-        alert("Please enter all payment details");
+  function startCheckout() {
+    const saved = JSON.parse(localStorage.getItem("paymentCreds"));
+    if (saved) {
+      const useSaved = confirm("Use saved payment credentials?");
+      if (useSaved) {
+        confirmPayment(saved);
         return;
       }
+    }
+    showCredentialForm();
+  }
 
-      const creds = { email, card };
-      localStorage.setItem("paymentCreds", JSON.stringify(creds));
-      confirmPayment(creds);
+  function showCredentialForm() {
+    const div = document.getElementById("checkoutArea");
+    div.innerHTML = `
+      <div class="bg-white p-6 rounded shadow">
+        <h3 class="text-lg font-semibold mb-4">Enter Payment Details</h3>
+        <input type="email" id="email" placeholder="Email" class="w-full p-3 border border-gray-300 rounded mb-3" required>
+        <input type="text" id="card" placeholder="Card Number" class="w-full p-3 border border-gray-300 rounded mb-4" required>
+        <button onclick="saveAndPay()" class="w-full bg-green-600 text-white py-3 rounded hover:bg-green-700">💳 Pay Now</button>
+      </div>
+    `;
+  }
+
+  function saveAndPay() {
+    const email = document.getElementById("email").value;
+    const card = document.getElementById("card").value;
+
+    if (!email || !card) {
+      alert("Please enter all payment details");
+      return;
     }
 
-    function confirmPayment(creds) {
-      alert(`✅ Payment done using:\nEmail: ${creds.email}\nCard ending in ****${creds.card.slice(-4)}`);
-      localStorage.removeItem("cart");
-      window.location.href = "index.html";
-    }
-  </script>
+    const creds = { email, card };
+    localStorage.setItem("paymentCreds", JSON.stringify(creds));
+    confirmPayment(creds);
+  }
+
+  function confirmPayment(creds) {
+    alert(`✅ Payment done using:\nEmail: ${creds.email}\nCard ending in ****${creds.card.slice(-4)}`);
+    localStorage.removeItem("cart");
+    window.location.href = "index.html";
+  }
+
+  // Initial render
+  renderCart();
+</script>
 </body>
 </html>
