--- a/walmart-mock/index.html
+++ b/walmart-mock/index.html
@@ -59,7 +59,7 @@
     <input id="chatInput" type="text" placeholder="Type your message..."
       class="border mt-3 px-4 py-2 rounded w-full" />
     <div class="flex gap-2 mt-2">
-      <button onclick="sendChat()" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 w-full">Send</button>
+      <button onclick="sendChat()" id="sendChat" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 w-full">Send</button>
       <button id="micToggle" onclick="toggleMic()"
         class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 w-full">🎤 Mic On</button>
       <input type="file" id="chatImageUpload" accept="image/*"
