improved catalog and chat.js

--- a/walmart-mock/index.html
+++ b/walmart-mock/index.html
@@ -31,14 +31,19 @@
 
   <!-- Features -->
   <section class="p-6 bg-white shadow-md m-4 rounded-lg">
-    <h2 class="text-xl font-bold mb-4">✨ Key Features</h2>
-    <ul class="list-disc list-inside space-y-2">
-      <li>🔍 Smart Search: Just type or speak the product name.</li>
-      <li>🛒 One-Click Add to Cart: Easily add products to your cart.</li>
-      <li>💳 Seamless Payment: Proceed with saved credentials securely.</li>
-      <li>🤖 Chat Assistance: Ask our bot anything about your shopping journey.</li>
-      <li>🗺️ Navigation Help: Can’t find something? Ask the bot for directions.</li>
-    </ul>
+    <h2 class="text-xl font-bold mb-4">Key Features</h2>
+<ul class="list-disc list-inside space-y-2">
+  <li> Smart Search & Filtering: Instantly find products using text or voice input.</li>
+  <li> Voice & Image Input: Add items to your cart just by speaking or uploading photos.</li>
+  <li> AI Chat Assistant: Chat in Order Mode or General Mode for a tailored experience.</li>
+  <li> Barcode Scanner: Scan barcodes to instantly match and add products.</li>
+  <li> Smart Product Recommendations: Get helpful suggestions based on what’s in your cart.</li>
+  <li> One-Click Cart: Quickly add, adjust, and review products before checkout.</li>
+  <li> Product Matching: LLM converts vague names or captions into actual items.</li>
+  <li> Store Navigation Help (Simulated): Ask the bot where to find items in-store.</li>
+  <li> Seamless Checkout (Simulated): Experience quick and secure mock payments.</li>
+</ul>
+
   </section>
 
   <!-- Products -->
